# snaplet-mongodb-minimalistic

./: .gitignore  LICENSE  README.md  Snap-Snaplet-MongoDB-Core.html  Snap-Snaplet-MongoDB-Functions-M.html  Snap-Snaplet-MongoDB-Functions-S.html  Snap-Snaplet-MongoDB-Functions.html  Snap-Snaplet-MongoDB.html  doc-index.html  index-frames.html  index.html  mini_Snap-Snaplet-MongoDB-Core.html  mini_Snap-Snaplet-MongoDB-Functions-M.html  mini_Snap-Snaplet-MongoDB-Functions-S.html  mini_Snap-Snaplet-MongoDB.html  snaplet-mongodb-minimalistic.cabal  snaplet-mongodb-minimalistic.haddock
examples/example1/: example1.cabal
examples/example1/snaplets/heist/templates/: index.tpl
examples/example1/src/: Application.hs  Main.hs  Site.hs
examples/example1/src/Example/: Foo.hs
src/Snap/Snaplet/: MongoDB.hs
src/Snap/Snaplet/MongoDB/: Core.hs  Functions.hs
src/Snap/Snaplet/MongoDB/Functions/: M.hs  S.hs
